fix overflow register, login page

--- a/main.css
+++ b/main.css
@@ -991,7 +991,7 @@ table a:hover {
     position: absolute;
     top: 50%;
     left: 50%;
-    margin-top: -15rem;
+    margin-top: -21rem;
     margin-left: -15rem;
     padding: 20px 20px 10px 20px;
 }
